Trickle down improvements from AbstractLenientFloatingPointBitsFromCharSequence to other implementations.